<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">二维码终端系统</string>
    <string name="password">密码</string>
    <string name="user_id">账号</string>
    <string name="title_login">二维码终端系统</string>
    <string name="btn_login">登录</string>
    <string name="company_code">公司编号</string>
    <string name="save">保存</string>
    <string name="restart_preview">保存</string>
    <string name="label">箱条码ID:</string>
    <string name="staff">作业者:</string>
    <string name="item">产品代码:</string>
    <string name="name">产品名称:</string>
    <string name="wh_loc1">仓库:</string>
    <string name="wh_loc2">仓位:</string>
    <string name="date_time">作业时间:</string>
    <string name="condition">状态:</string>
    <string name="push">提交</string>
    <string name="end">结束</string>
    <string name="download">下载</string>
    <string name="doc_no">指示号码:</string>
    <string name="total_qty">总计划数:</string>
    <string name="scan_qty">已扫描数:</string>
    <string name="remian_qty">未扫描数:</string>
    <string name="from_loc1">转出仓库:</string>
    <string name="from_loc2">转出仓位:</string>
    <string name="to_loc1">转入仓库:</string>
    <string name="to_loc2">转入仓位:</string>
    <string name="please_select">请选择</string>
    <string name="box_details">数据查询</string>
    <string name="box_label_scan">装箱条码扫描</string>
    <string name="dialog_content">查询不到此条码</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_complete">所有条码扫描完毕</string>
    <string name="notice">提示</string>
    <string name="dialog_complete_exit">作业指示内的装箱条码未扫描完毕，是否退出？</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_scanned">此条码已被扫描</string>
    <string name="dialog_not_find">查询不到此条码</string>
    <string name="hint">提示</string>
    <string name="update_data">是否上传所有数据到服务器？</string>
    <string name="yes">确定</string>
    <string name="error_code">条码信息有误</string>
    <string name="dialog_exist">此装箱码已存在于仓库</string>
    <string name="stock_check">在库盘点</string>
    <string name="in_out">出入库</string>
    <string name="ins_view">作业指示内容显示</string>
    <string name="ins_scan">作业指示内容扫描</string>
    <string name="home">首页</string>
    <string name="settings">设置</string>
    <string name="staff_scan">作业者编号扫描</string>
    <string name="transfer">转仓录入</string>
    <string name="complete">完成</string>
    <string name="staff_code_error">作业者编号错误</string>
    <string name="error_item">机种不符合</string>
    <string name="scan_staff_card_no">扫描员工工号.</string>
    <string name="qty">数量</string>

</resources>