<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        tools:context="com.isl.bcs.view.LoginActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="55dp"
            android:text="@string/title_login"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="105dp"
            android:layout_marginRight="40dp"
            android:hint="@string/user_id"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:imeOptions="actionNext"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="tiger"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="40dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:text="123456"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape_white_solid_20r"
            android:text="@string/btn_login"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <ImageView
            android:id="@+id/btn_setting"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="50dp"
            android:src="@mipmap/login_icon_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>